--- a/GAM CAGNY 2021.rmd
+++ b/GAM CAGNY 2021.rmd
@@ -1,9 +1,11 @@
 ---
 title: "GAM CAGNY 2021"
 author: "Sam Kloese"
-date: "11/16/2021"
+date: "11/29/2021"
 output: pdf_document
 ---
+
+## Load Packages
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
@@ -53,6 +55,10 @@ pg17train <- pg17trainpol %>%
   mutate(vh_din = as.double(vh_din)) %>% 
   mutate(vh_din = case_when(vh_din > 200 ~ 200,
                             TRUE ~ vh_din))
+
+dim(pg17train)
+sum(pg17train$claim_count)
+unique(pg17train$pol_coverage)
 
 # Remove record with NA's
 pg17train2 <- pg17train[complete.cases(pg17train),]
@@ -165,100 +171,13 @@ ggplot(aes(x = vh_din), data = vh_din_summary) +
   geom_col(aes(y = exposures))
 ```
 
-## Adjust k in Smooth Function
-
-```{r smooth, echo = TRUE}
-
-# k = 3
-
-gam_k3 <- gam(claim_count ~ s(drv_age1, k = 3),
-                 family = poisson(link = "log"),
-                 offset = log(exposures),
-                 data = training_data)
-plot(gam_k3, residuals = FALSE, pch = 1)
-coef(gam_k3)
-
-# Create a new data table, to show the predictions by age
-agetable <- data.frame(drv_age1 = c(25,26,27,28,29,
-                                    30,31,32,33,34,
-                                    35,36,37,38,39,
-                                    40,41,42,43,44,
-                                    45,46,47,48,49,
-                                    50,51,52,53,54,
-                                    55,56,57,58,59,
-                                    60,61,62,63,64,
-                                    65,66,67,68,69,
-                                    70,71,72,73,74,75),
-                       pol_coverage = rep("Maxi",51),
-                       pol_usage = rep("WorkPrivate",51),
-                       drv_sex1 = rep("M",51),
-                       vh_age = rep(1, 51),
-                       vh_din = rep(100, 51),
-                       exposures = 1)
-
-plot_data <- agetable %>% 
-  mutate(predicted_claims = predict(gam_k3, newdata = agetable, type = "response")) %>% 
-  mutate(predicted_freq = predicted_claims / exposures)
-
-ggplot(aes(x = drv_age1), data = plot_data) +
-  geom_line(aes(y = predicted_freq), col = "blue") 
-
-# k = 5
-
-gam_k5 <- gam(claim_count ~ s(drv_age1, k = 5),
-                 family = poisson(link = "log"),
-                 offset = log(exposures),
-                 data = training_data)
-plot(gam_k5, residuals = FALSE, pch = 1)
-coef(gam_k5)
-
-plot_data <- agetable %>% 
-  mutate(predicted_claims = predict(gam_k5, newdata = agetable, type = "response")) %>% 
-  mutate(predicted_freq = predicted_claims / exposures)
-
-ggplot(aes(x = drv_age1), data = plot_data) +
-  geom_line(aes(y = predicted_freq), col = "blue") 
-
-# k = 7
-
-gam_k7 <- gam(claim_count ~ s(drv_age1, k = 7),
-                 family = poisson(link = "log"),
-                 offset = log(exposures),
-                 data = training_data)
-plot(gam_k7, residuals = FALSE, pch = 1)
-coef(gam_k7)
-
-plot_data <- agetable %>% 
-  mutate(predicted_claims = predict(gam_k7, newdata = agetable, type = "response")) %>% 
-  mutate(predicted_freq = predicted_claims / exposures)
-
-ggplot(aes(x = drv_age1), data = plot_data) +
-  geom_line(aes(y = predicted_freq), col = "blue") 
-
-# k = 10
-
-gam_k10 <- gam(claim_count ~ s(drv_age1, k = 10),
-                 family = poisson(link = "log"),
-                 offset = log(exposures),
-                 data = training_data)
-plot(gam_k10, residuals = FALSE, pch = 1)
-coef(gam_k10)
-
-plot_data <- agetable %>% 
-  mutate(predicted_claims = predict(gam_k10, newdata = agetable, type = "response")) %>% 
-  mutate(predicted_freq = predicted_claims / exposures)
-
-ggplot(aes(x = drv_age1), data = plot_data) +
-  geom_line(aes(y = predicted_freq), col = "blue") 
-
-```
 
 ## Model with Tensor Interaction
 
 ```{r interaction, echo = TRUE}
 
-gam_final <- gam(claim_count ~ pol_coverage + pol_duration + pol_usage +
-                   s(drv_age1, k = 20) + s(vh_age, k = 20) +
+gam_final <- gam(claim_count ~ pol_coverage + pol_usage +
+                   s(drv_age1, k = 4) + s(vh_age, k = 4) +
                    te(vh_din, vh_weight, k = 3),
                  family = poisson(link = "log"),
                  offset = log(exposures),
@@ -285,13 +204,18 @@ vis.gam(x = gam_final,
 gam.check(gam_final)
 
 concurvity(gam_final, full = TRUE)
+
 ```
 
 ## Quantile Plot on Train Data
 
 ```{r quantile_train, echo = TRUE}
+
+training_predictions = data.frame(predictions=predict(gam_final,
+                                                     newdata = training_data,
+                                                     type = "response"))
 training_predictions <- training_data %>%
-  mutate(predicted_claims = predict(gam_final, training_data, type = "response")) %>%
+  mutate(predicted_claims = training_predictions$predictions) %>%
   mutate(predicted_frequency = predicted_claims / exposures)
 
 total_exposures <- sum(training_predictions$exposures)
@@ -307,17 +231,24 @@ quantile_plot_data <- training_predictions %>%
 
 ggplot(aes(x = decile),data = quantile_plot_data) +
 geom_line(aes(y = expected)) +
-  geom_point(aes(y = actual))
+  geom_point(aes(y = actual),color="blue") +
+  scale_x_continuous(limits = c(0,11), breaks = seq(1,10,1))
+
 
 ggplot(aes(x = decile),data = quantile_plot_data) +
-geom_col(aes(y = exposures))
+geom_col(aes(y = exposures)) +
+    scale_x_continuous(limits = c(0,11), breaks = seq(1,10,1))
 ```
 
 ## Quantile Plot on Test Data
 
 ```{r quantile_test, echo = TRUE}
+testing_predictions = data.frame(predictions=predict(gam_final,
+                                                     newdata = testing_data,
+                                                     type = "response"))
+
 testing_predictions <- testing_data %>%
-  mutate(predicted_claims = predict(gam_final, testing_data, type = "response")) %>%
+  mutate(predicted_claims = testing_predictions$predictions) %>%
   mutate(predicted_frequency = predicted_claims / exposures)
 
 total_exposures <- sum(testing_predictions$exposures)
@@ -333,8 +264,234 @@ quantile_plot_data <- testing_predictions %>%
 
 ggplot(aes(x = decile),data = quantile_plot_data) +
 geom_line(aes(y = expected)) +
-  geom_point(aes(y = actual))
+  geom_point(aes(y = actual),color="blue") + 
+  scale_x_continuous(limits = c(0,11), breaks = seq(1,10,1))
 
 ggplot(aes(x = decile),data = quantile_plot_data) +
+geom_col(aes(y = exposures)) +
+  scale_x_continuous(limits = c(0,11), breaks = seq(1,10,1))
+```
+
+## Residual Plot by Predicted Value
+
+```{r residual, echo = TRUE}
+
+min(testing_predictions$predicted_frequency)
+max(testing_predictions$predicted_frequency)
+
+testing_predictions <- testing_predictions %>% 
+  mutate(prediction_bucket = cut(predicted_frequency,
+                                 breaks = c(0,0.04,0.05,
+                                            0.06,0.07,0.08,0.09,0.10,
+                                            0.11,0.12,0.13,0.14,0.15,
+                                            0.16,0.17,0.18,0.19,0.20,
+                                            0.21,0.22,0.23,0.24,0.25,
+                                            0.26,0.27,0.28,0.29,0.30,
+                                            0.31,.32,0.33,0.34,0.35,
+                                            0.36,0.37,0.38,0.39,0.40,
+                                            1.00)))
+
+residual_plot_data <- testing_predictions %>% 
+  mutate(residual = claim_count - predicted_claims) %>% 
+  group_by(prediction_bucket) %>% 
+  summarize(mean_residual = mean(residual))
+
+ggplot(aes(x = prediction_bucket),data = residual_plot_data) +
+  geom_point(aes(y=mean_residual),color = "blue")+
+  theme(axis.text.x=element_text(angle=90, size=8))
+
+```
+
+## Actual vs. Expected
+
+```{r a_v_e, echo = TRUE}
+
+driver_age_a_v_e <- testing_predictions %>% 
+  group_by(drv_age1) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = drv_age1),data = driver_age_a_v_e) +
+geom_line(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = drv_age1),data = driver_age_a_v_e) +
 geom_col(aes(y = exposures))
+
+driver_age_a_v_e2 <- testing_predictions %>% 
+  mutate(drv_age1_bucket = cut(drv_age1,
+                               breaks = c(0,25,30,35,40,45,50,
+                                          55,60,65,70,75,200))) %>% 
+  group_by(drv_age1_bucket) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = drv_age1_bucket),data = driver_age_a_v_e2) +
+geom_point(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = drv_age1_bucket),data = driver_age_a_v_e2) +
+geom_col(aes(y = exposures))
+
+# Vehicle Motor Power
+
+vh_din_a_v_e <- testing_predictions %>% 
+  group_by(vh_din) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = vh_din),data = vh_din_a_v_e) +
+geom_line(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = vh_din),data = vh_din_a_v_e) +
+geom_col(aes(y = exposures))
+
+vh_din_a_v_e2 <- testing_predictions %>% 
+  mutate(vh_din_bucket = cut(vh_din,
+                               breaks = c(0,25,50,75,100,
+                                          125,150,175,200,1000))) %>% 
+  group_by(vh_din_bucket) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = vh_din_bucket),data = vh_din_a_v_e2) +
+geom_point(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = vh_din_bucket),data = vh_din_a_v_e2) +
+geom_col(aes(y = exposures))
+
+# Vehicle Weight
+
+vh_weight_a_v_e <- testing_predictions %>% 
+  group_by(vh_weight) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = vh_weight),data = vh_weight_a_v_e) +
+geom_line(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+vh_weight_a_v_e2 <- testing_predictions %>% 
+  mutate(vh_weight_bucket = cut(vh_weight,
+                               breaks = c(0,500,1000,1500,2000,2500,
+                                          3000,3500,4000,4500,5000,
+                                          10000),
+                               labels = c("<500","500-1000","1000-1500","1500-2000","2000-2500",
+                                          "2500-3000","3000-3500","3500-4000","4000-4500","4500-5000",
+                                          "5000+"))) %>% 
+  group_by(vh_weight_bucket) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = vh_weight_bucket),data = vh_weight_a_v_e2) +
+geom_point(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency)) +
+  theme(axis.text.x=element_text(angle=90, size=8))
+
+ggplot(aes(x = vh_weight),data = vh_weight_a_v_e) +
+geom_col(aes(y = exposures))
+
+# Vehicle Age
+
+vh_age_a_v_e <- testing_predictions %>% 
+  group_by(vh_age) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = vh_age),data = vh_age_a_v_e) +
+geom_line(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = vh_age),data = vh_age_a_v_e) +
+geom_col(aes(y = exposures))
+
+# Policy Coverage
+
+pol_coverage_a_v_e <- testing_predictions %>% 
+  group_by(pol_coverage) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = pol_coverage),data = pol_coverage_a_v_e) +
+geom_point(aes(y = predicted_frequency), color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = pol_coverage),data = pol_coverage_a_v_e) +
+geom_col(aes(y = exposures))
+
+# Policy Usage
+
+pol_usage_a_v_e <- testing_predictions %>% 
+  group_by(pol_usage) %>% 
+  summarize(predicted_frequency = sum(predicted_claims)/sum(exposures),
+            actual_frequency = sum(claim_count)/sum(exposures),
+            exposures = sum(exposures))
+
+ggplot(aes(x = pol_usage),data = pol_usage_a_v_e) +
+geom_point(aes(y = predicted_frequency),color = "blue") +
+  geom_point(aes(y = actual_frequency))
+
+ggplot(aes(x = pol_usage),data = pol_usage_a_v_e) +
+geom_col(aes(y = exposures))
+
+```
+
+## Incremental AIC
+
+```{r aic, echo = TRUE}
+gam_step1 <- gam(claim_count ~ pol_coverage, 
+                 family = poisson(link = "log"),
+                 offset = log(exposures),
+                 data = training_data)
+
+aic_1 <- AIC(gam_step1)
+
+gam_step2 <- gam(claim_count ~ pol_coverage + pol_usage,
+                 family = poisson(link = "log"),
+                 offset = log(exposures),
+                 data = training_data)
+
+aic_2 <- AIC(gam_step2)
+
+gam_step3 <- gam(claim_count ~ pol_coverage + pol_usage +
+                   s(drv_age1, k = 4),
+                 family = poisson(link = "log"),
+                 offset = log(exposures),
+                 data = training_data)
+
+aic_3 <- AIC(gam_step3)
+
+gam_step4 <- gam(claim_count ~ pol_coverage + pol_usage +
+                   s(drv_age1, k = 4) + s(vh_age, k = 4),
+                 family = poisson(link = "log"),
+                 offset = log(exposures),
+                 data = training_data)
+
+aic_4 <- AIC(gam_step4)
+
+gam_step5 <- gam(claim_count ~ pol_coverage + pol_usage +
+                   s(drv_age1, k = 4) + s(vh_age, k = 4) +
+                   te(vh_din, vh_weight, k = 3),
+                 family = poisson(link = "log"),
+                 offset = log(exposures),
+                 data = training_data)
+
+aic_5 <- AIC(gam_step5)
+
+aic_1
+aic_2
+aic_3
+aic_4
+aic_5
+
 ```
