--- a/GAM CAGNY 2021.rmd
+++ b/GAM CAGNY 2021.rmd
@@ -5,6 +5,8 @@ date: "11/29/2021"
 output: pdf_document
 ---
 
+<!-- This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0. If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
+
 ## Load Packages
 
 ```{r setup, include=FALSE}
